--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:unit:watch": "vue-cli-service test:unit --watchAll",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-icons": "vsvg -s ./src/assets/icons -t ./src/shared/icons --ext ts --es6"
   },
   "dependencies": {
     "core-js": "^3.6.5",
